--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ a {
   transition: color 0.3s, border-bottom 0.3s;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
@@ -26,21 +27,44 @@ ul, ol {
 
 .menu-icon {
   display: none; /*So aparece no mobile*/
-  font-size: 2rem;
+  width: 30px;
+  height: 22px;
+  position: relative;
   cursor: pointer;
+  z-index: 9999;
+}
+
+.menu-icon span {
+  background-color: var(--letters);
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  left: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.menu-icon span:nth-child(1) {
+  top: 0;
+}
+.menu-icon span:nth-child(2) {
+  top: 9px;
+}
+.menu-icon span:nth-child(3) {
+  bottom: 0;
 }
 
 /* VARIÁVEIS */
 :root {
-  --button: #e4cc6c;
-  --shade: #d9c168;
-  --letters: #5e4e21;
-  --nav-footer: #f9e2c0;
-  --color4: #9a8a4e;
-  --color5: #d3cfcb;
+  --button: #ffd6a5;      /* botão laranja pastel */
+  --shade: #ffcad4;       /* sombreado rosa pastel */
+  --letters: #1a1817;     /* marrom suave para textos */
+  --nav-footer: rgb(191, 253, 255);  /* verde pastel no menu/rodapé */
+  --color4: #a0c4ff;      /* azul pastel para hover */
+  --color5: #bdb2ff;      /* lilás pastel */
   --white: #fff;
-  --box-shadow: 3px 3px 8px 0 rgba(0, 0, 0, 0.555);
+  --box-shadow: 3px 3px 8px 0 rgba(0, 0, 0, 0.2); /* sombra mais leve */
 }
+
 
 /* SEÇÕES */
 section {
@@ -71,7 +95,8 @@ header {
 
 /* LOGO */
 .logo img {
-  width: 70px;
+  max-width: 100px;
+  height: auto;
   display: block;
 }
 
@@ -385,9 +410,10 @@ footer svg {
   }
 
   .navbar {
-    display: none;
     flex-direction: column;
-    background-color: var(--nav-footer);
+    background-color: var(--nav-footer.0.9);
+    backdrop-filter: blur(7px);
+    opacity: 0;
     position: absolute;
     top: 70px;
     left: 0;
@@ -395,19 +421,39 @@ footer svg {
     padding: 1rem;
     gap: 1rem;
     border-top: 1px solid var(--color5);
+    pointer-events: none;
+    transform: translateY(-20px);
+    transition: all 0.4s ease-in-out;
   }
 
   .menu-icon {
+    position: absolute;
     display: block;
-    color: var(--letters);
+    top: 20px;
+    right: 20px;
   }
 
   #menu-toggle:checked ~ .navbar {
-    display: flex;
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0);
+  }
+
+  #menu-toggle:checked + .menu-icon span:nth-child(1) {
+    transform: rotate(45deg);
+    top: 9px;
+  }
+
+  #menu-toggle:checked + .menu-icon span:nth-child(2) {
+    opacity: 0;
+  }
+
+  #menu-toggle:checked + .menu-icon span:nth-child(3) {
+    transform: rotate(-45deg);
+    bottom: 9px;
   }
 
   .navbar a {
-    margin: 0;
     font-size: 1rem;
     border-bottom: 1px solid var(--color5);
     padding-bottom: 0.5rem;
@@ -419,7 +465,7 @@ footer svg {
   }
 
   .hero-description {
-    margin-top: 3rem;
+    margin-top: 0.5rem;
   }
 
   .hero-description h1 {
@@ -429,6 +475,4 @@ footer svg {
   .contact-us h2 {
     font-size: 1.5rem;
   }
-
-
 }
