--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ section {
   padding: 3rem 2rem;
   margin: 0 auto;
   max-width: 1200px;
+  scroll-margin-top: 100px;
 }
 
 /* HEADER */
@@ -444,14 +445,15 @@ footer {
 
   .navbar {
     flex-direction: column;
-    backdrop-filter: blur(7px);
+    backdrop-filter: blur(10px);
     opacity: 0;
     position: absolute;
-    top: 0px;
+    top: 100px;
     left: 0;
     width: 100%;
     padding: 1rem;
     gap: 1rem;
+    align-items: start;
     pointer-events: none;
     transform: translateY(-40px);
     transition: all 0.4s ease-in-out;
@@ -460,7 +462,7 @@ footer {
   .menu-icon {
     position: absolute;
     display: block;
-    top: 20px;
+    top: 40px;
     right: 20px;
   }
 
@@ -485,8 +487,8 @@ footer {
   }
 
   .navbar a {
-    font-size: 1rem;
-    border-bottom: 1px solid var(--color5);
+    font-size: 1.1rem;
+    border-bottom: 1px solid var(--hover);
     padding-bottom: 0.5rem;
   }
 
