--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 /* ESTILOS GLOBAIS */
 body {
   font-family: "Roboto", sans-serif;
+  background-color: var(--white);
 }
 
 a {
@@ -55,20 +56,20 @@ ol {
 
 /* VARIÁVEIS */
 :root {
-  --button: #ffd6a5; /* botão laranja pastel */
-  --hover: #a0c4ff; /* hover azul pastel */
-  --color5: #bdb2ff; /* lilás pastel */
-  --letters: #1a1817; /* marrom suave para textos */
+  --button: #02b14d; /* botão laranja pastel */
+  --hover: #cddef3; /* hover azul pastel */
+  --color5: #6aa7df; /* lilás pastel */
+  --letters: #07121c; /* marrom suave para textos */
   --header-footer: #f1ebe1; /* verde pastel no menu/rodapé */
   --nav-footer: 191, 253, 255; /* guardo os canais RGB para usar com alpha */
-  --bg-card: #e6e4e3;
-  --white: #fff;
+  --bg-card: #cddef3;
+  --white: #ebf1fa;
   --box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* SEÇÕES */
 section {
-  padding: 3rem 2rem;
+  padding: 1rem 2rem;
   margin: 0 auto;
   max-width: 1200px;
   scroll-margin-top: 100px;
@@ -76,11 +77,7 @@ section {
 
 /* HEADER */
 header {
-  background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0.438) 100%),
-    url(assets/bkimg.jpg);
-  background-size: cover;
-  background-position: center;
+  background-color: var(--bg-card);
   position: fixed;
   top: 0;
   width: 100%;
@@ -119,11 +116,11 @@ header {
   font-weight: 500;
   color: var(--letters);
   border-bottom: 0 solid transparent;
+  transition: all 0.3s ease-in-out;
 }
 
 .navbar a:hover {
-  color: var(--hover);
-  border-bottom: 0.1rem solid var(--hover);
+  border-bottom: 0.1rem solid var(--letters);
 }
 
 /* MAIN */
@@ -142,7 +139,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4rem 2rem;
+  padding: 2rem 2rem;
   gap: 2rem;
 }
 
@@ -161,6 +158,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 p {
@@ -170,6 +168,22 @@ p {
 }
 
 /* BOTÃO HERO */
+
+.quote-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.quote-container img {
+}
+
+.whatsapp-icon {
+  width: 20px;
+  margin-left: 5px;
+}
+
 .quote-button {
   background-color: var(--button);
   color: var(--white);
@@ -185,8 +199,12 @@ p {
 
 .quote-button:hover {
   opacity: 0.7;
-  color: var(--letters);
-  transform: translateY(-3px);
+  cursor: pointer;
+}
+
+.whatsapp-img {
+  display: flex;
+  flex-direction: column;
 }
 
 /* IMAGEM HERO */
@@ -196,10 +214,7 @@ p {
   height: auto;
   box-shadow: var(--box-shadow);
   transition: transform 0.4s ease-out;
-}
-
-.hero-img img:hover {
-  transform: translateY(-5px);
+  box-shadow: 5px 5px 16px -5px rgba(0, 0, 0, 0.57);
 }
 
 /* PROJECTS */
@@ -240,7 +255,7 @@ p {
 .project-card img {
   width: 300px;
   margin-bottom: 10px;
-  height: auto;
+  height: 380px;
   border-radius: 10px;
   box-shadow: var(--box-shadow);
   max-width: 100%;
@@ -264,24 +279,30 @@ p {
 
 .contact-us h2 {
   text-align: center;
-  margin-bottom: 40px;
   font-size: 2rem;
 }
 
 .contact-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-height: 60vh;
   gap: 20px;
 }
 
 .form {
   flex: 1;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .form form {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 10px;
   padding: 5px;
   border-radius: 5px;
@@ -292,10 +313,16 @@ p {
   font-weight: bold;
 }
 
+#contact-form {
+  width: 100%;
+  max-width: 450px;
+}
+
 .form input,
 .form textarea,
 .form button {
   width: 100%;
+  align-items: flex-start;
   padding: 5px;
   border-radius: 5px;
   border: 1px solid var(--button);
@@ -304,68 +331,21 @@ p {
 .form button {
   background-color: var(--button);
   color: var(--white);
-  border: 1px solid var(--button);
   width: 90px;
   transition: all 0.3s ease-in-out;
 }
 
 .form button:hover {
   opacity: 0.7;
-  color: var(--letters);
-  background-color: var(--button);
-  transition: all 0.3s ease-in-out;
-}
-
-.contact-info {
-  flex: 1;
-  padding: 10px;
-}
-
-.contact-info iframe {
-  border-radius: 10px;
-  width: 100%;
-  height: 300px;
-}
-
-.contact-info img {
-  width: 30px;
-  border-radius: 5px;
 }
 
 /* FOOTER */
 footer {
-  background-image: url(assets/bkground.png);
+  background-color: var(--bg-card);
   width: 100%;
   height: auto;
   text-align: center;
   position: relative;
-}
-
-.footer-curve {
-  position: relative;
-  background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0.438) 100%),
-    url(assets/bkimg.jpg);
-  background-size: cover;
-  background-position: center;
-  color: var(--letters);
-  text-align: center;
-  padding: 0px;
-}
-
-.footer-curve::before {
-  content: "";
-  position: absolute;
-  top: -40px;
-  left: 0;
-  margin-top: 15px;
-  width: 100%;
-  height: 35px;
-  background-image:url(assets/bkimg.jpg);
-  background-size: cover;
-  background-position: center;
-  border-top-left-radius: 100% 50px;
-  border-top-right-radius: 100% 50px;
 }
 
 .footer-container {
@@ -401,13 +381,22 @@ footer {
   .navbar {
     gap: 10px;
   }
+
+  .form input {
+    width: 300px;
+  }
 }
 
 @media (max-width: 768px) {
+  html {
+    scroll-padding-top: 30px; /* igual à altura do header fixo */
+  }
+
   header .container {
     flex-direction: column;
     gap: 10px;
     padding: 10px;
+    margin-bottom: -5px;
   }
 
   .navbar {
@@ -441,6 +430,10 @@ footer {
 @media (max-width: 480px) {
   .hero {
     padding: 2rem 1rem;
+  }
+
+  .hero-img {
+    display: none;
   }
 
   .navbar {
@@ -511,5 +504,9 @@ footer {
 
   .contact-us h2 {
     font-size: 1.5rem;
+  }
+
+  .contact-container {
+    min-height: auto;
   }
 }
